samples/_failures_safe/1761408351_d2f8d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03eaa4ee.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_03eaa4ee.c:184:29: error: expected ‘;’ at end of input
  184 |                 graph->edges
      |                             ^
      |                             ;
./samples/SAFE/__tmp_03eaa4ee.c:184:17: error: expected declaration or statement at end of input
  184 |                 graph->edges
      |                 ^~~~~
./samples/SAFE/__tmp_03eaa4ee.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_03eaa4ee.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_03eaa4ee.c:184:17: error: expected declaration or statement at end of input
